@@ -15,6 +15,8 @@ Core and Builtins
 - Issue #5787: object.__getattribute__(some_type, "__bases__") segfaulted on
   some builtin types.
 
+- Issue #5283: Setting __class__ in __del__ caused a segfault.
+
 - Issue #5759: float() didn't call __float__ on str subclasses.
 
 Library
